# hotstuff-cpp

./: CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt  blockchain.cpp  blockchain.h  blockchain_test.cpp  consensus.cpp  consensus.h  crypto.cpp  crypto.h  crypto_test.cpp  network.cpp  network.h  network_test.cpp  peers.cpp  peers.h  synchronizer.h  types.h
src/tests/: util.cpp  util.h
src/util/: array_hasher.h
